; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_bookmark.c_SwapBookmarkFiles.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_bookmark.c_SwapBookmarkFiles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kBookmarkFileName = common dso_local global i32 0, align 4
@kTmpBookmarkFileName = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"-%u.txt\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @SwapBookmarkFiles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SwapBookmarkFiles() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [32 x i8], align 16
  %3 = alloca [256 x i8], align 16
  %4 = alloca [256 x i8], align 16
  %5 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %6 = load i32, i32* @kBookmarkFileName, align 4
  %7 = call i32 @OurDirectoryPath(i8* %5, i32 256, i32 %6)
  %8 = getelementptr inbounds [256 x i8], [256 x i8]* %3, i64 0, i64 0
  %9 = load i32, i32* @kTmpBookmarkFileName, align 4
  %10 = call i32 @OurDirectoryPath(i8* %8, i32 256, i32 %9)
  %11 = getelementptr inbounds [32 x i8], [32 x i8]* %2, i64 0, i64 0
  %12 = call i64 (...) @getpid()
  %13 = trunc i64 %12 to i32
  %14 = call i32 @sprintf(i8* %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = getelementptr inbounds [256 x i8], [256 x i8]* %3, i64 0, i64 0
  %16 = getelementptr inbounds [32 x i8], [32 x i8]* %2, i64 0, i64 0
  %17 = call i32 @STRNCAT(i8* %15, i8* %16)
  %18 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %19 = call i32 @remove(i8* %18)
  %20 = getelementptr inbounds [256 x i8], [256 x i8]* %3, i64 0, i64 0
  %21 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %22 = call i64 @rename(i8* %20, i8* %21)
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %26

25:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %26

26:                                               ; preds = %25, %24
  %27 = load i32, i32* %1, align 4
  ret i32 %27
}

declare dso_local i32 @OurDirectoryPath(i8*, i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i64 @getpid(...) #1

declare dso_local i32 @STRNCAT(i8*, i8*) #1

declare dso_local i32 @remove(i8*) #1

declare dso_local i64 @rename(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
